# chat_gpt_dmenu

./: .gitignore  .pre-commit-config.yaml  README.md  chatgpt_dmenu.py  config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
src/: app.py  chatgpt_client.py  chatgpt_dmenu.py  config_loader.py  context_manager.py  dmenu_ui.py  notifier.py
src/chatgpt_dmenu/: app.py  chatgpt_client.py  clipboard.py  config_loader.py  context_manager.py  dmenu_ui.py  main.py  notifier.py
